gitops/apps/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: complete-eks-portal-service
  namespace: production
  labels:
    app: complete-eks-portal
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: complete-eks-portal
